# personal-ai-agent

./: .gitignore  GEMINI.md  README.md  analyzer_project.py  main.py  pyproject.toml
config/: commands_config.json  context_config.json  error_analytics_config.json  mcp_config.json  memory_config.json  models_config (template).json  models_config.json  system_config.json  ui_config.json
config/prompts/: classification.json  roles.json
core/: agent.py  api_manager.py  command_executor.py  context_manager.py  error_analytics.py  event_dispatcher.py  exceptions.py  memory_manager.py  plugin_manager.py  role_selector.py  service_locator.py
core/commands/: base_command.py  command_history.py  tool_command.py
core/context/: context_pruner.py  conversation_tree.py
docs/: improvement_suggestions.md  instructions.md  plan.md
input/: hotkey_manager.py
personal_ai_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
plugins/: __init__.py  demo_plugin.py  mcp_integration.py  screen_capture.py
testing/: go_to_coordinates.py  google_genai_test.py  render_html.py  test_api_connections.py  test_openrouter_api.py
tests/: conftest.py  test_api_manager.py  test_config_loader.py  test_context_manager.py  test_event_dispatcher.py  test_logger.py  test_memory_manager.py  test_plugin_manager.py  test_screen_capture.py
ui/: html_formatter.py  notification.py  popup_window.py  settings_window.py  tray_manager.py  ui_utils.py
ui/settings_tabs/: api_keys_tab.py  coming_soon_tab.py  general_tab.py  (+3 more)
utils/: config_loader.py  error_reporter.py  logger.py
