[project]
name = "personal-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "beautifulsoup4>=4.14.2",
    "customtkinter>=5.2.2",
    "google-api-core>=2.26.0",
    "google-genai>=1.45.0",
    "litellm>=1.78.4",
    "markdown>=3.9",
    "mcp[cli]>=1.18.0",
    "mss>=10.1.0",
    "pillow>=10.4.0",
    "psutil>=7.1.2",
    "pynput>=1.8.1",
    "pystray>=0.19.5",
    "requests>=2.32.5",
    "tenacity>=9.1.2",
    "tkhtmlview>=0.3.1",
]

[tool.setuptools]
packages = ["core", "utils", "ui", "plugins", "input"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.7",
    "toml>=0.10.2",
]

[tool.analyzer]
exclude_dirs = [".git", "__pycache__", ".pytest_cache", "venv", ".venv", "node_modules", "build", "dist"]
file_length_threshold = 500
complexity_threshold_medium = 15
complexity_threshold_high = 20
class_count_threshold = 4
